syntax = "proto3";

package pbmx.common;

message Stack {
    repeated Mask masks = 1;
}

message Mask {
    bytes raw = 1;
}

message SecretShare {
    bytes raw = 1;
}
