syntax = "proto3";

package pbmx.proof;

message DlogEqProof {
    bytes raw = 1;
}

message ShuffleProof {
    bytes raw = 1;
}

message RotationProof {
    bytes raw = 1;
}

message EntanglementProof {
    bytes raw = 1;
}

message SubsetProof {
    bytes raw = 1;
}

message SupersetProof {
    bytes raw = 1;
}

message DisjointProof {
    bytes raw = 1;
}
